--- a/index.html
+++ b/index.html
@@ -7,48 +7,54 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0f8ff;
+      background: #f4faff;
       margin: 0;
-      padding: 30px;
+      padding: 40px 0;
+      overflow-x: hidden;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       color: #2c3e50;
     }
 
-    .section-title {
-      margin: 40px 0 10px;
-      font-size: 1.4em;
-      color: #2c3e50;
-    }
-
-    .card-container {
+    .carousel {
       display: flex;
-      gap: 20px;
       overflow-x: auto;
       scroll-snap-type: x mandatory;
-      padding-bottom: 20px;
+      scroll-behavior: smooth;
+      padding: 0 20px;
     }
 
     .card {
-      flex: 0 0 auto;
+      flex: 0 0 80%;
+      max-width: 400px;
+      margin: auto;
       background: white;
-      border-radius: 12px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+      border-radius: 14px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
       padding: 20px;
-      width: 250px;
-      scroll-snap-align: start;
-      transform: translateY(50px);
+      scroll-snap-align: center;
+      transform: translateY(60px);
       opacity: 0;
       animation: rollIn 0.6s ease-out forwards;
     }
 
     .card img {
-      max-width: 100%;
-      border-radius: 8px;
-      margin-bottom: 10px;
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 12px;
+    }
+
+    .card h2 {
+      margin: 0;
+      color: #34495e;
+    }
+
+    .card p {
+      margin: 6px 0;
+      color: #555;
     }
 
     @keyframes rollIn {
@@ -57,73 +63,88 @@
         opacity: 1;
       }
     }
+
+    .section {
+      margin-top: 60px;
+    }
+
+    .section-title {
+      text-align: center;
+      font-size: 1.5em;
+      color: #2c3e50;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Fruit & Vegetable Info Cards</h1>
+  <h1>Nutrition Explorer 🌿</h1>
 
-  <div class="section-title">🍓 Fruits</div>
-  <div class="card-container" id="fruits">
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Banana" alt="Banana">
-      <h2>Banana</h2>
-      <p><strong>Vitamins:</strong> B6, C</p>
-      <p><strong>Calories:</strong> 89 kcal</p>
-      <p><strong>Uses:</strong> Smoothies, snacks, baking</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Mango" alt="Mango">
-      <h2>Mango</h2>
-      <p><strong>Vitamins:</strong> A, C, E</p>
-      <p><strong>Calories:</strong> 60 kcal</p>
-      <p><strong>Uses:</strong> Juices, desserts, chutneys</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Apple" alt="Apple">
-      <h2>Apple</h2>
-      <p><strong>Vitamins:</strong> C, B6</p>
-      <p><strong>Calories:</strong> 52 kcal</p>
-      <p><strong>Uses:</strong> Salads, snacking, baking</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Grapes" alt="Grapes">
-      <h2>Grapes</h2>
-      <p><strong>Vitamins:</strong> C, K</p>
-      <p><strong>Calories:</strong> 67 kcal</p>
-      <p><strong>Uses:</strong> Juices, snacking, wine</p>
+  <div class="section">
+    <div class="section-title">🍓 Fruits</div>
+    <div class="carousel">
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Banana" alt="Banana">
+        <h2>Banana</h2>
+        <p><strong>Vitamins:</strong> B6, C</p>
+        <p><strong>Calories:</strong> 89 kcal</p>
+        <p><strong>Uses:</strong> Smoothies, snacks</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Mango" alt="Mango">
+        <h2>Mango</h2>
+        <p><strong>Vitamins:</strong> A, C, E</p>
+        <p><strong>Calories:</strong> 60 kcal</p>
+        <p><strong>Uses:</strong> Juices, desserts</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Apple" alt="Apple">
+        <h2>Apple</h2>
+        <p><strong>Vitamins:</strong> C, B6</p>
+        <p><strong>Calories:</strong> 52 kcal</p>
+        <p><strong>Uses:</strong> Salads, baking</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Grapes" alt="Grapes">
+        <h2>Grapes</h2>
+        <p><strong>Vitamins:</strong> C, K</p>
+        <p><strong>Calories:</strong> 67 kcal</p>
+        <p><strong>Uses:</strong> Juices, wine</p>
+      </div>
     </div>
   </div>
 
-  <div class="section-title">🥦 Vegetables</div>
-  <div class="card-container" id="vegetables">
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Tomato" alt="Tomato">
-      <h2>Tomato</h2>
-      <p><strong>Vitamins:</strong> A, C, K</p>
-      <p><strong>Calories:</strong> 18 kcal</p>
-      <p><strong>Uses:</strong> Sauces, soups, salads</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Carrot" alt="Carrot">
-      <h2>Carrot</h2>
-      <p><strong>Vitamins:</strong> A, K, C</p>
-      <p><strong>Calories:</strong> 41 kcal</p>
-      <p><strong>Uses:</strong> Raw, stir-fry, juice</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Spinach" alt="Spinach">
-      <h2>Spinach</h2>
-      <p><strong>Vitamins:</strong> A, C, K</p>
-      <p><strong>Calories:</strong> 23 kcal</p>
-      <p><strong>Uses:</strong> Curries, soups, salad</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150?text=Potato" alt="Potato">
-      <h2>Potato</h2>
-      <p><strong>Vitamins:</strong> B6, C</p>
-      <p><strong>Calories:</strong> 77 kcal</p>
-      <p><strong>Uses:</strong> Frying, baking, curries</p>
+  <div class="section">
+    <div class="section-title">🥦 Vegetables</div>
+    <div class="carousel">
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Tomato" alt="Tomato">
+        <h2>Tomato</h2>
+        <p><strong>Vitamins:</strong> A, C, K</p>
+        <p><strong>Calories:</strong> 18 kcal</p>
+        <p><strong>Uses:</strong> Sauces, salads</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Carrot" alt="Carrot">
+        <h2>Carrot</h2>
+        <p><strong>Vitamins:</strong> A, K, C</p>
+        <p><strong>Calories:</strong> 41 kcal</p>
+        <p><strong>Uses:</strong> Stir-fry, juice</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Spinach" alt="Spinach">
+        <h2>Spinach</h2>
+        <p><strong>Vitamins:</strong> A, C, K</p>
+        <p><strong>Calories:</strong> 23 kcal</p>
+        <p><strong>Uses:</strong> Curries, salad</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200?text=Potato" alt="Potato">
+        <h2>Potato</h2>
+        <p><strong>Vitamins:</strong> B6, C</p>
+        <p><strong>Calories:</strong> 77 kcal</p>
+        <p><strong>Uses:</strong> Baking, curries</p>
+      </div>
     </div>
   </div>
 
@@ -135,5 +156,6 @@
       });
     });
   </script>
+
 </body>
 </html>
